--- a/Client/src/Pages/Home/Home.css
+++ b/Client/src/Pages/Home/Home.css
@@ -3,6 +3,7 @@
   top: 0;
   left: 0;
   width: 100%;
+  /* text-align: center; */
   background-color: #ffffff; /* Example background color */
   z-index: 1000;
   padding: 10px 20px; /* Example padding */
